fix: Resolved issue in signup page; added password visibility toggle
Addressed a minor issue in the signup page and introduced the option for users to toggle the visibility of the password they enter, improving the overall user experience.

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -47,3 +47,13 @@
     background-image: unset;
   }
 }
+
+.show-password {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  cursor: pointer;
+  transform: translate(-150%, -50%);
+}
